Resilience4J in Items

--- a/productos/src/main/resources/application.yml
+++ b/productos/src/main/resources/application.yml
@@ -27,3 +27,24 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info
+  info:
+    env:
+      enabled: true
+  endpoint:
+    info:
+      enabled: true
+
+info:
+  app:
+    name: ${spring.application.name}
+    version: 1.0.0
+    description: microservicios de items
+  svc:
+    intanceid: ${eureka.instance.instance-id}
+    port: ${server.port}
