--- a/items/pom.xml
+++ b/items/pom.xml
@@ -68,6 +68,10 @@
             <artifactId>spring-cloud-starter-config</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
