--- a/items/src/main/resources/application.yml
+++ b/items/src/main/resources/application.yml
@@ -8,11 +8,6 @@ spring:
 server:
   port: ${PORT:0}
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
 eureka:
   instance:
     hostname: localhost
@@ -21,4 +16,23 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info
+  info:
+    env:
+      enabled: true
+  endpoint:
+    info:
+      enabled: true
 
+info:
+  app:
+    name: ${spring.application.name}
+    version: 1.0.0
+    description: microservicios de items
+  svc:
+    intanceid: ${eureka.instance.instance-id}
+    port: ${server.port}
