--- a/productos/src/main/resources/application.yml
+++ b/productos/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: servicio-productos
+  sleuth:
+    sampler:
+      probability: 1.0
+  zipkin:
+    base-url: http://localhost:9411/
 
 
 server:
